--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>William's ePortfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple HTML file.</p>
+    <h1>Welcome to My Portfolio! Enjoy :)</h1>
+    <p>Professional Self-Assessment Completing my coursework and developing my ePortfolio has been instrumental in showcasing my strengths, shaping my professional goals and values, and preparing me to enter the computer science field. Here’s how:
+
+Input Validation In the development of the Animal Rescue Java App, I designed and implemented a system that allows animals to be reserved and added to a reservation list. This project honed my skills in Input Validation/Sanitation, to the benefit of my End Users success in using the application.
+
+Advanced Database Operations My coursework included extensive work with advanced database operations. During the development of the Pymongo App for Rescuing Animals Based on Environment Types, I implemented complex filtering by age and location, and integrated geolocation maps into the dashboard. This experience enhanced my ability to manage and query data efficiently, providing users with a powerful and intuitive interface.
+
+Data Structures and Algorithms My coursework included extensive work with data structures and algorithms, which are fundamental to computer science. The Binary Search Tree (Doubly Linked) project is a prime example. Implementing this data structure required a deep understanding of algorithms and their efficiency, which is critical for developing optimized and effective software solutions.
+
+Software Engineering and Database In the Animal Rescue Java App, I applied software engineering principles to design a robust and scalable application. Additionally, the Pymongo App project involved working with databases, where I utilized MongoDB to manage and query data efficiently. These projects reinforced my understanding of software development life cycles, database management, and the importance of writing clean, maintainable code.
+
+Security Security is a paramount concern in software development. Throughout my coursework, I learned about various security practices and implemented them in my projects. For example, in the Animal Rescue Java App, I ensured that user data was securely handled and stored, protecting it from potential threats.
+
+Summary of Artifacts The artifacts in my ePortfolio demonstrate a comprehensive range of my computer science skills and abilities. Each project showcases different aspects of my expertise:
+
+Animal Rescue Java App: Highlights my ability to work in a team, communicate effectively with stakeholders, and apply software engineering principles. Binary Search Tree (Doubly Linked): Demonstrates my proficiency in data structures and algorithms. Pymongo App for Rescuing Animals Based on Environment Types: Showcases my skills in database management and security practices.</p>
 </body>
 </html>
