--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>William's ePortfolio</title>
+
+    <nav>
+    <a href="CS_499_Milestone_2.html">CS 499 Milestone 2</a>
+</nav>
+    
 </head>
 <body>
     <h1>Welcome to My Portfolio! Enjoy :)</h1>
