--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-    <a href="CS_499_Milestone_2.html">CS 499 Milestone 2</a>
+    <a href="CodeReview.html">Code Review</a>
     </nav>
     
     <h1>Welcome to My Portfolio! Enjoy :)</h1>
