--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <nav>
     <a href="CodeReview.html">Code Review</a>
     </nav>
+
+    <nav>
+    <a href="SWEenhancement.html">SWE enhancement</a>
+    </nav>
     
     <h1>Welcome to My Portfolio! Enjoy :)</h1>
     
