--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </nav>
 
     <nav>
-    <a href="SWEenhancement.html">SWE enhancement</a>
+    <a href="SWEenchancement.html">SWE enhancement</a>
     </nav>
     
     <h1>Welcome to My Portfolio! Enjoy :)</h1>
