--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <nav>
     <a href="CodeReview.html">Code Review</a>
     <a href="SWEenchancement.html">SWE enhancement</a>
+    <a href="CareerPlans.html"> Career Plans</a>
     </nav>
     
     <h1>Welcome to My Portfolio! Enjoy :)</h1>
