--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="CodeReview.html">Code Review</a>
     <a href="SWEenchancement.html">SWE Enhancement Narrative</a>
     <a href="BSTEnhancement.html"> BST Enhancement Narrative</a>
+    <a href="JupyterDashEnhancement.html"> JuptyerDash Enhancement Narrative</a>
     <a href="CareerPlans.html"> Career Plans</a>
     
     </nav>
