--- a/JupyterDashEnhancement.html
+++ b/JupyterDashEnhancement.html
@@ -1,5 +1,5 @@
 <p>William Fishburn</p>
-<p>CS 499 Milestone Four</p>
+<p>Jupyter Dash Artifact</p>
 <h3
 id="briefly-describe-the-artifact.-what-is-it-when-was-it-created"><strong>Briefly
 describe the artifact. What is it? When was it created?</strong></h3>
