--- a/SWEenchancement.html
+++ b/SWEenchancement.html
@@ -1,5 +1,5 @@
 <p>William Fishburn</p>
-<p>Milestone Assignment 3-2</p>
+<p>Rescue Animal Artifact</p>
 <p><strong>Enhancement One:</strong></p>
 <p><strong>Software Design and Engineering</strong></p>
 <h4 id="section"></h4>
