--- a/BSTEnhancement.html
+++ b/BSTEnhancement.html
@@ -1,7 +1,8 @@
 <p>William Fishburn</p>
-<p>Milestone Assignment 4-2</p>
+<p>BST Artifact</p>
 <p><strong>Enhancement Two:</strong></p>
 <p><strong>Data Structures and Algorithms</strong></p>
+
 <h4 id="section"></h4>
 <h3
 id="briefly-describe-the-artifact.-what-is-it-when-was-it-created"><strong><u>1)
