--- a/JupyterDashEnhancement.html
+++ b/JupyterDashEnhancement.html
@@ -1,5 +1,8 @@
 <p>William Fishburn</p>
 <p>Jupyter Dash Artifact</p>
+<p><strong>Enhancement Three:</strong></p>
+<p><strong>Database Optimization</strong></p>
+
 <h3
 id="briefly-describe-the-artifact.-what-is-it-when-was-it-created"><strong>Briefly
 describe the artifact. What is it? When was it created?</strong></h3>
