--- a/JupyterDashEnhancement.html
+++ b/JupyterDashEnhancement.html
@@ -1,7 +1,10 @@
 <p>William Fishburn</p>
-<p>Jupyter Dash Artifact</p>
+<p>Database Artifact</p>
 <p><strong>Enhancement Three:</strong></p>
 <p><strong>Database Optimization</strong></p>
+
+Note: Both the original and enhanced files can be found within this repository:
+they are named 'CS499DBOriginal' and 'CS499DBEnhanced'.
 
 <h3
 id="briefly-describe-the-artifact.-what-is-it-when-was-it-created"><strong>Briefly
