--- a/BSTEnhancement.html
+++ b/BSTEnhancement.html
@@ -3,6 +3,9 @@
 <p><strong>Enhancement Two:</strong></p>
 <p><strong>Data Structures and Algorithms</strong></p>
 
+Note: The original and enhanced files are found in this repo, 
+in a folder 'Binary Search Tree Complete'.
+
 <h4 id="section"></h4>
 <h3
 id="briefly-describe-the-artifact.-what-is-it-when-was-it-created"><strong><u>1)
