--- a/SWEenchancement.html
+++ b/SWEenchancement.html
@@ -2,6 +2,10 @@
 <p>Rescue Animal Artifact</p>
 <p><strong>Enhancement One:</strong></p>
 <p><strong>Software Design and Engineering</strong></p>
+
+Note: The original and enhanced files are found in this repo,
+in a folder named 'CS 499 - Java - Animal Rescue Enhanced'.
+
 <h4 id="section"></h4>
 <h3
 id="briefly-describe-the-artifact.-what-is-it-when-was-it-created"><strong><u>1)
