--- a/JupyterDashEnhancement.html
+++ b/JupyterDashEnhancement.html
@@ -4,7 +4,7 @@
 <p><strong>Database Optimization</strong></p>
 
 Note: Both the original and enhanced files can be found within this repository:
-they are named 'CS499DBOriginal' and 'CS499DBEnhanced'.
+they are named 'CS499_DB_Original' and 'CS499DBEnhanced'.
 
 <h3
 id="briefly-describe-the-artifact.-what-is-it-when-was-it-created"><strong>Briefly
