--- a/CareerPlans.html
+++ b/CareerPlans.html
@@ -92,7 +92,7 @@ issues</th>
 instructor</th>
 <th style="text-align: left;">Submitted with feedback from
 instructor</th>
-<th>Planned but not yet completed</th>
+<th>Completed</th>
 </tr>
 <tr>
 <th style="text-align: left;">Status of Final Enhancement</th>
@@ -100,7 +100,7 @@ instructor</th>
 was applied</th>
 <th style="text-align: left;">Feedback applied, and final polish
 applied</th>
-<th>Planned but not yet completed</th>
+<th>Completed</th>
 </tr>
 <tr>
 <th style="text-align: left;">Uploaded to Portfolio</th>
@@ -108,13 +108,13 @@ applied</th>
 confirmed navigation on GitHub Pages site</th>
 <th style="text-align: left;">Completed with polished narrative and
 confirmed navigation on GitHub Pages site</th>
-<th>Planned but not yet completed</th>
+<th>Completed</th>
 </tr>
 <tr>
 <th style="text-align: left;">Status of Finalized Portfolio</th>
 <th style="text-align: left;">Ready for review in Module Seven</th>
 <th>Ready for review in Module Seven</th>
-<th>Planned but not yet completed</th>
+<th>Completed</th>
 </tr>
 </thead>
 <tbody>
