--- a/SWEenchancement.html
+++ b/SWEenchancement.html
@@ -93,7 +93,7 @@ simplify codebases, making them easier to maintain..</p></li>
 <p><strong>II. What challenges did you face?</strong></p>
 <ul>
 <li><p>Ensuring that the code remains simple and readable while
-incorporating robust features like error handling and input validation.
+incorporating robust features like error handling and input validation/data for data security.
 It took much attention to detail, implementing comprehensive input
 validation to cover all possible edge cases and user errors.</p></li>
 </ul>
