--- a/CareerPlans.html
+++ b/CareerPlans.html
@@ -83,8 +83,7 @@ BinarySearchTree</p>
 <th style="text-align: left;">Status of Initial Enhancement</th>
 <th style="text-align: left;">Enhancements completed</th>
 <th style="text-align: left;">Enhancements completed</th>
-<th style="text-align: left;">Enhancements in progress; no current
-issues</th>
+<th style="text-align: left;">Enhancements in completed.</th>
 </tr>
 <tr>
 <th style="text-align: left;">Submission Status</th>
