--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <nav>
+    <a href="CS499-mod1-CodeReview.mp4">Code Review Video!</a>    
     <a href="CodeReview.html">Code Review</a>
     <a href="SWEenchancement.html">SWE Enhancement Narrative</a>
     <a href="BSTEnhancement.html"> BST Enhancement Narrative</a>
